k8s/qa/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qa

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: qa
  labels:
    app: postgres            #pods will be named app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:                     #specifies the container image the pods will run
        - name: postgres
          image: postgres:16
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
#          persistentVolumeClaim:
#            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: qa
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres # Select pods with label app=mongodb
  ports:
    - protocol: TCP
      port: 5432 # Service Port
      targetPort: 5432 # Pods Port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: qa
  labels:
    app: frontend            #pods will be named app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: "${FRONTEND_VERSION}"
    spec:
      nodeSelector:
        arch: arm64
    spec:
      containers:                     #specifies the container image the pods will run
        - name: frontend
          image: 822298509516.dkr.ecr.us-east-1.amazonaws.com/blue_green_ecr/frontend:${FRONTEND_VERSION}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          #env:
          #  - name: REACT_APP_USER_SERVICE_URL
          #    value: http://user-service:8081
          #  - name: REACT_APP_TASK_SERVICE_URL
          #    value: http://taskview-service:8082


---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: qa
spec:
  type: ClusterIP
  selector:
    app: frontend
    version: "${FRONTEND_VERSION}"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskview-service-deployment
  namespace: qa
  labels:
    app: taskview-service            #pods will be named app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskview-service
  template:
    metadata:
      labels:
        app: taskview-service
    spec:
      nodeSelector:
        arch: arm64
    spec:
      containers:                     #specifies the container image the pods will run
        - name: taskview-service
          image: 822298509516.dkr.ecr.us-east-1.amazonaws.com/blue_green_ecr/taskview_service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
---

apiVersion: v1
kind: Service
metadata:
  name: taskview-service
  namespace: qa
spec:
  type: ClusterIP
  selector:
    app: taskview-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: qa
  labels:
    app: user-service            #pods will be named app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      nodeSelector:
        arch: arm64
    spec:
      containers:                     #specifies the container image the pods will run
        - name: user-service
          image: 822298509516.dkr.ecr.us-east-1.amazonaws.com/blue_green_ecr/user_service:latest #pulls image from repo
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: qa
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
